--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -587,34 +587,28 @@ $ADMIN_MENU = [
 
 				],
 		},
+		
+		
+		{
+		-Title      => 'App Information',
+		-Activated  => 1,
+		-Submenu    => [
+					{
+					-Title      => 'Configuration',
+					-Title_URL  => "$S_PROGRAM_URL?f=setup_info",
+					-Function   => 'setup_info',
+					-Activated  => 1,
+					},
 
-	{
-	-Title      => 'About Dada Mail',
-	-Title_URL  => "$S_PROGRAM_URL?f=manage_script",
-	-Function   => 'manage_script',
-	-Activated  => 1,
-	},
+					{
+					-Title      => 'About Dada Mail',
+					-Title_URL  => "$S_PROGRAM_URL?f=manage_script",
+					-Function   => 'manage_script',
+					-Activated  => 1,
+					},
 
-	{
-	-Title      => '<!-- tmpl_var PROGRAM_NAME --> Setup Info',
-	-Title_URL  => "$S_PROGRAM_URL?f=setup_info",
-	-Function   => 'setup_info',
-	-Activated  => 1,
-	},
-
-	{
-	-Title      => 'Logout',
-	-Title_URL  => "$S_PROGRAM_URL?f=logout",
-	-Function   => 'logout',
-	-Activated  => 1,
-	},
-
-	{
-	-Title      => 'Log Into Another List',
-	-Title_URL  => "$S_PROGRAM_URL?f=log_into_another_list",
-	-Function   => 'log_into_another_list',
-	-Activated  => 1,
-	},
+				],
+			},
 
 ];
 
