--- a/dada/DADA/Template/templates/sending_monitor_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin sending_monitor_screen.tmpl -->
 
-<div id="titlestuff"> 
+<div id="screentitle"> 
 	<div id="screentitlepadding">
 		Mass Mailing &#187; Monitor Your Mailings
 		<!-- tmpl_if header_subject_label --> 
