--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -2,7 +2,15 @@
 
 <!-- tmpl_set name="title" value="Setup Information" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
-<!-- tmpl_include help_link_widget.tmpl --> 
+
+
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+	 	<!-- tmpl_var title --> 
+	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
+
 
 
 <h1>Installation and Configuration</h1> 
