--- a/dada/DADA/Template/templates/filtered_list_activity_widget.tmpl
+++ b/dada/DADA/Template/templates/filtered_list_activity_widget.tmpl
@@ -10,7 +10,7 @@
 		<li>
 			
 		<!-- tmpl_if expr="(action eq 'subscribed')" --> 
-			&#8594; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=edit_subscriber;email=<!-- tmpl_var email escape=URL -->;type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
+			&#8594; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership;email=<!-- tmpl_var email escape=URL -->;type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
 			<!-- tmpl_if expr="(type eq 'list')" -->
 				<strong>Subscribed</strong>
 			<!-- tmpl_else -->
@@ -19,7 +19,7 @@
 			 to
 		<!-- /tmpl_if -->
 		<!-- tmpl_if expr="(action eq 'unsubscribed')" --> 
-			&#8592; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=edit_subscriber;email=<!-- tmpl_var email escape=URL -->;type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
+			&#8592; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership;email=<!-- tmpl_var email escape=URL -->;type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
 			<!-- tmpl_if expr="(type eq 'list')" -->
 				<strong>Unsubscribed</strong>
 			<!-- tmpl_else -->
@@ -28,7 +28,7 @@
 			from
 		<!-- /tmpl_if -->
 		<!-- tmpl_if expr="(action eq 'confirmation_sent')" -->
-			&#8596; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=edit_subscriber;email=<!-- tmpl_var email escape=URL -->;type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
+			&#8596; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership;email=<!-- tmpl_var email escape=URL -->;type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
 			<!-- tmpl_if expr="(type eq 'list')" -->
 				<strong>Subscription Confirmation Sent</strong>
 			<!-- tmpl_else -->
