--- a/dada/DADA/Template/templates/view_list_table_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_table_widget.tmpl
@@ -134,7 +134,7 @@
 		    </a>
 		<!-- /tmpl_if --> 
 		<!-- tmpl_if expr="((no_email_links) != 1 && (type ne 'bounced_list'))" -->
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=edit_subscriber;email=<!-- tmpl_var email -->;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->;query=<!-- tmpl_var query -->" >
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership;email=<!-- tmpl_var email -->;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->;query=<!-- tmpl_var query -->" >
 				<!-- tmpl_var email --> 
 			</a>
 		<!-- /tmpl_if -->
