--- a/dada/DADA/Template/templates/edit_archived_msg.tmpl
+++ b/dada/DADA/Template/templates/edit_archived_msg.tmpl
@@ -12,7 +12,7 @@
 
 
 <!-- tmpl_if done --> 
-	<!-- tmpl_var GOOD_JOB_MESSAGE --> 
+	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  --> 
 <!-- /tmpl_if --> 
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" enctype="multipart/form-data" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
