--- a/dada/DADA/Template/templates/list_template.tmpl
+++ b/dada/DADA/Template/templates/list_template.tmpl
@@ -29,7 +29,8 @@
 	    <div class="floatclear"></div>
 	  </div><!-- ends id="Header" -->
 	
-	
+	<div id="AdminContentWrapper">
+		
    <div id="Content">	
 	<!-- tmpl_if show_profile_widget --> 
 		<!-- tmpl_var profile_widget --> 
@@ -66,6 +67,14 @@
 		<!-- /tmpl_if --> 
 	<!-- /tmpl_if -->
    </div><!-- ends id="Content" -->
+</div> 
+
+	<div id="Footer">
+		<div id="FooterPadding">
+			<p><!-- tmpl_var footer_props --></p>
+		</div>
+	</div>
+	
   </div><!-- ends id="PageWrapper" -->
  </body>
 </html>
