--- a/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
@@ -5,7 +5,7 @@
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <!-- tmpl_if done -->  
-	<!-- tmpl_var GOOD_JOB_MESSAGE -->
+	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
 <!--/tmpl_if-->
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
