--- a/dada/DADA/Template/templates/css/default.css
+++ b/dada/DADA/Template/templates/css/default.css
@@ -1,7 +1,12 @@
 
 /* ----- GENERAL ----- */
-
+html { 
+	margin: 0;
+	padding: 0	
+}
 body {
+	margin: 0;
+	padding: 0;	
 	background-color: #fff;
 	font-family: helvetic,arial,san-serif;
 	line-height: 1.50em;
@@ -9,29 +14,16 @@ body {
 	background: #fff;
 }
 
-/* non-admin */
-body#Dada {
-	margin: 0;
-	padding: 0;
-}
-/* admin */
-body#DadaAdmin {
-	margin: 0;
-	padding: 0;
-}
-
 /* ----- IDS: General Page Layout ----- */
 
 /* non-admin */
-#PageWrapper {
-}
+#PageWrapper {}
 
 #Header {
 	min-width: 800px;
 	height: 50px;
 	margin: 0 auto; /* page centering for all but IE */
 	padding:0px;
-	border-bottom: 1px solid #333;
 	background-color: #669999; /* 99cc99 */
 	background-image: url('<!-- tmpl_var S_PROGRAM_URL -->/img/header_bg.gif/');
 	background-repeat: repeat-y;
@@ -61,7 +53,6 @@ body#DadaAdmin {
 	text-decoration: underline;
 }
 
-
 /* non-admin */
 #Content {
 	padding-left:50px; 
@@ -70,52 +61,53 @@ body#DadaAdmin {
 	padding-bottom:20px;
 }
 
-/* box model hack for IE: \*/
-* html #Content {
-}
-/* ends the box model hack. see: http://tinyurl.com/9yld6 */
-
-
-
-
-#AdminPageWrapper {
-	background: #fff;
-}
-
-#AdminContentWrapper {
-	margin: 0 0 0px 200px;
-	min-width: 640px;
-}
-
-#AdminContent {
-	width: 100%;
-	/*
-	padding-top:8px;
-	padding: 10px;
-	*/
-}
-
-#MenuWrapper {
-}
-
-#Menu {
-	position: absolute;
-	top: 50px; /* Double-check that one.. */
-	left:0px;
+#Menu {	
+	margin-left: -100%;
+	float:left;
 	width: 199px;
 	padding: 0;
-	/*border:1px solid #000;*/
 	border-right:1px solid #666;
 	background-color: #fff;
 	text-align: left;
 	line-height: 150%;
 }
-/* http://tantek.com/CSS/Examples/boxmodelhack.html */
-/* box model hack for IE: \*/
-* html #Menu {
-	width: 200px;
+
+#AdminContentWrapper {
+	border-top: 1px solid #666;
+	float: left;
+	width: 100%
+	
 }
-/* ends the box model hack. see: http://tinyurl.com/9yld6 */
+#AdminContent {
+	margin-left: 200px;
+	padding-bottom: 10px;
+}
+
+#Footer {
+	border-top: 1px solid #666;
+	background-color: #669999;
+	height:50px;
+	color: #fff;
+	font: 1.1em "Avant Garde", "Century Gothic", AvantGarde, Helvetica,Verdana,Arial,sans-serif;
+	text-shadow: 1px 1px 2px #330033;
+	clear:both;
+	
+}
+
+#Footer a {
+	color: #fff;
+	text-decoration: none;
+}
+#Footer a:hover {
+	color: #fff;
+	text-decoration: underline;
+}
+
+
+#FooterPadding { 
+	padding:5px;
+}
+
 
 /* ----- IDS: Navigation ----- */
 
@@ -200,37 +192,6 @@ color:#09c;
 }
 
 
-a.menu_disabled {
-	color: #999;
-	font-style: italic;
-}
-
-a.menu_disabled:link {
-	color: #999;
-	font-style: italic;
-}
-
-a.menu_disabled:visited {
-	color: #999;
-	font-style: italic;
-}
-
-a.menu_disabled:hover {
-	color: #999;
-	font-style: italic;
-}
-
-a.menu_disabled:active {
-	color: #999;
-	font-style: italic;
-}
-
-
-
-
-
-
-
 .highlighted {
 	font-style: normal;
 	background-color: #6F3;
@@ -261,14 +222,20 @@ p.link_to_screen {
 }
 
 .psuedomodalbox {
+
 	margin-left: auto;
 	margin-right: auto;
 	width: 350px;
-	border: 1px solid #333;
+	border: 1px solid #333; 
 	background-color: #EFEFEF;
 	color: #000;
 	text-align: left;
 	padding: 5px
+	
+	-webkit-box-shadow: 0px 0px 10px #330033;
+	-moz-box-shadow: 0px 0px 10px #330033;
+	box-shadow: 0px 0px 10px #330033;
+	
 }
 
 .login_message {
@@ -820,6 +787,18 @@ li.archive_badges_li {
 	text-decoration: none;
 }
 
+#navcontainer ul ul a.menu_disabled,
+#navcontainer ul ul a.menu_disabled:link,
+#navcontainer ul ul a.menu_disabled:visited,
+#navcontainer ul ul a.menu_disabled:hover,
+#navcontainer ul ul a.menu_disabled:active 
+ {
+	color: #ccc;
+	font-style: italic;
+}
+
+
+
 /* currently, there is no subactive state...
 ul#navlist li#active ul#subnavlist li#subactive a {
 font-weight: bold;
@@ -828,8 +807,6 @@ background: #fff;
 text-decoration: none;
 }
 */
-
-
 
 .stripedtable {
 	border-collapse: collapse;
