--- a/dada/DADA/Template/templates/feature_set_screen.tmpl
+++ b/dada/DADA/Template/templates/feature_set_screen.tmpl
@@ -13,7 +13,7 @@
   
 <!-- tmpl_if done --> 
 
-    <!-- tmpl_var GOOD_JOB_MESSAGE --> 
+    <!-- tmpl_include changes_saved_dialog_box_widget.tmpl  --> 
 
 <!--/tmpl_if--> 
 
