--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -10,7 +10,7 @@
 </div> 
 
 <!-- tmpl_if done -->
-	<!-- tmpl_var GOOD_JOB_MESSAGE -->
+	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
 <!--/tmpl_if-->
 
 <div style="width:100%"><!-- what's this all about? --> 
