--- a/dada/DADA/Template/templates/view_list_modalmenu_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_modalmenu_widget.tmpl
@@ -2,6 +2,7 @@
 
 <!-- tmpl_if expr="((add_email_count > 0) || (delete_email_count  > 0) || (black_list_add > 0) || (approved_count  > 0) || (denied_count  > 0) || (bounced_list_moved_to_list_count  > 0) || (bounced_list_removed_from_list > 0) )" --> 
 
+<br />
 <div class="psuedomodalbox" id="alertbox">
 	
 	
@@ -101,12 +102,14 @@
 		
 	<div style="text-align: center;">
 	
-	<input type="button" name="foo" class="plain" value="Thanks!" onClick="Effect.Fade('alertbox');" />
+	<input type="button" class="small_button" value="Thanks!" onClick="Effect.Fade('alertbox');" />
 	</div>
-	</div> 
+
 </div> 
 
 <!-- /tmpl_if -->
 
+
+<br />
 
 <!-- end view_list_modalmenu_widget.tmpl --> 
