--- a/dada/DADA/Template/templates/css/default.css
+++ b/dada/DADA/Template/templates/css/default.css
@@ -233,8 +233,12 @@ p.link_to_screen {
 	padding: 5px
 	
 	-webkit-box-shadow: 0px 0px 10px #330033;
-	-moz-box-shadow: 0px 0px 10px #330033;
-	box-shadow: 0px 0px 10px #330033;
+	   -moz-box-shadow: 0px 0px 10px #330033;
+	        box-shadow: 0px 0px 10px #330033;
+	
+	-webkit-border-radius: 5px;
+	   -moz-border-radius: 5px;
+	        border-radius: 5px;
 	
 }
 
