--- a/dada/DADA/Template/templates/archive_index_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_index_screen.tmpl
@@ -7,7 +7,7 @@
 <!-- tmpl_if entries --> 
 
 
-    <!-- tmpl_include name="archive_list_widget.tmpl" -->
+    <!-- tmpl_include archive_list_widget.tmpl -->
 
 <!-- tmpl_else --> 
 
@@ -17,6 +17,6 @@
 
 <!--/tmpl_if-->
 
-<!-- tmpl_include name="archive_footer_widget.tmpl" -->
+<!-- tmpl_include archive_footer_widget.tmpl -->
 
 <!-- end archive_index_screen.tmpl -->
