--- a/dada/DADA/Template/templates/archive_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_screen.tmpl
@@ -6,17 +6,22 @@
 
 <!-- tmpl_if send_archive_success -->
 	
-	<p class="positive">
+	<div class="clearskiesbox">
+	<p>
 	 The message has been forwarded to your friend!
 	</p>
+	</div>
+
 	
 <!-- /tmpl_if -->
 
 <!-- tmpl_if send_archive_errors -->
 	
-	<p class="error">
-	 There was an error in the Send Archive form you filled out.
-	</p>
+	<div class="badweatherbox">
+		<p>
+	 	There was an error in the Send Archive form you filled out.
+		</p>
+	</div>
 	
 <!-- /tmpl_if -->
 
