--- a/dada/DADA/Template/templates/changes_saved_dialog_box_widget.tmpl
+++ b/dada/DADA/Template/templates/changes_saved_dialog_box_widget.tmpl
@@ -1,10 +1,10 @@
 <!-- begin changes_saved_dialog_box_widget.tmpl --> 
 
 <br />
-<div class="psuedomodalbox" id="changed_saved_dialog_box">
+<div class="clearskiesbox" id="changed_saved_dialog_box">
 
-	<p class="alert">
-		Changes have been saved.
+	<p>
+		Your changes have been saved!
 	</p>
 
 	<div style="text-align: center;">
