--- a/dada/DADA/Template/templates/default_screen.tmpl
+++ b/dada/DADA/Template/templates/default_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin default_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Sign Up for a List" -->
+<!-- tmpl_set name="title" value="Subscribe to a Mailing List" -->
  
 
 <!-- tmpl_if error_invalid_list --> 
@@ -15,7 +15,7 @@
     <!-- tmpl_var subscription_form --> 
     
     <h1>
-     Available Lists:
+     Available Mailing Lists:
     </h1>
     
     <!-- tmpl_loop list_information -->
