--- a/dada/DADA/Template/templates/error_install_dir_still_around_screen.tmpl
+++ b/dada/DADA/Template/templates/error_install_dir_still_around_screen.tmpl
@@ -4,7 +4,10 @@
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 
+<div class="badweatherbox">
 The, <em>dada/<strong>installer</strong></em> directory needs to be removed (preferably) or renamed, before you 
 can utilize Dada Mail. 
+</div>
+
 
 <!-- end error_install_dir_still_around_screen.tmpl -->
