--- a/dada/DADA/Template/templates/error_logged_into_different_list_screen.tmpl
+++ b/dada/DADA/Template/templates/error_logged_into_different_list_screen.tmpl
@@ -4,7 +4,7 @@
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 
-<h1>You're logged into a different list!</h1>
+<h1>You're logged into a different Mailing List!</h1>
 
 <p>
  Please log out of your current list, before logging into a new list. 
