--- a/dada/DADA/Template/templates/error_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/error_subscribed_screen.tmpl
@@ -33,7 +33,7 @@
 </ul>
 
 <p>
- If you would like to subscribe to a different list, please visit the <!-- tmpl_var PROGRAM_NAME --> 
+ If you would like to subscribe to a different Mailing List, please visit the <!-- tmpl_var PROGRAM_NAME --> 
 	<a href="<!-- tmpl_var PROGRAM_URL -->?email=<!-- tmpl_var subscriber.email -->">
 		main screen
     </a>, 
