--- a/dada/DADA/Template/templates/list_page_screen.tmpl
+++ b/dada/DADA/Template/templates/list_page_screen.tmpl
@@ -16,15 +16,15 @@
 <!-- tmpl_var subscription_form --> 
 
 
-<div id="list_information"><!-- tmpl_if comment -->Not sure what this id is for!<!-- /tmpl_if -->
-
-<h2>List Information:</h2>
+<div>
+	
+<h2>Mailing List Information:</h2>
 
 <ul> 
     <!-- tmpl_if list_settings.group_list --> 
         <li>
          <p>
-			This list is a group discussion list
+			This mailing list is a group discussion list
          
             <!-- tmpl_if list_settings.enable_moderation --> 
                 (moderated)
@@ -43,7 +43,7 @@
         
         <li>
          <p>
-			This list is an announce-only list.
+			This mailing list is announce-only.
          </p>
 		</li>
 
