--- a/dada/DADA/Template/templates/list_popup_login_form.tmpl
+++ b/dada/DADA/Template/templates/list_popup_login_form.tmpl
@@ -22,8 +22,9 @@
 
 
  <p>
-  You will need to know your List Password to access your control panel.
- </p>
+	You may use either your <strong>List Password</strong> or <!-- tmpl_var PROGRAM_NAME --> Root Password to to log into the List Control Panel. 
+	Your <!-- tmpl_var PROGRAM_NAME --> Root Password will work for all Mailing Lists. 
+</p>
 
  <table align="center" cellpadding="5">
   <tr>
@@ -32,14 +33,14 @@
      <label for="admin_list">
       Select
      </label>
-     your list:
+     your Mailing List:
     </p>
    </td>
    <td align="right">
     <p>
      Type in your
      <label for="admin_password">
-      List Password:
+      Password:
      </label>
     </p>
    </td>
