--- a/dada/DADA/Template/templates/new_list_created_screen.tmpl
+++ b/dada/DADA/Template/templates/new_list_created_screen.tmpl
@@ -119,7 +119,7 @@
 	<li>
  <strong>
   <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var SIGN_IN_FLAVOR_NAME -->&amp;list=<!-- tmpl_var escaped_list -->" target="_blank">
-   Sign in to your control panel
+   Log in to your control panel
   </a>
 </strong>
 </li> 
