--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -17,7 +17,7 @@
 
 <!-- tmpl_if c_install --> 
 
-<h2>You have a Contemporary Install of Dada MaiL</h2> 
+<h2>You have a Contemporary Install of Dada Mail</h2> 
 
 <p><!-- tmpl_var PROGRAM_NAME --> is set up to use an outside config file.</p>
 
