--- a/dada/DADA/Template/templates/error_not_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/error_not_subscribed_screen.tmpl
@@ -41,7 +41,7 @@
  <li>The list owner has already unsubscribed your email address.</li>
 </ul>
 
-<p>If you would like to unsubscribe from a different list, please visit the <!-- tmpl_var PROGRAM_NAME --> 
+<p>If you would like to unsubscribe from a different mailing list, please visit the <!-- tmpl_var PROGRAM_NAME --> 
 	<a href="<!-- tmpl_var PROGRAM_URL -->?email=<!-- tmpl_var email escape="HTML" -->&amp;set_flavor=u">
 	 main screen
 	</a>
