--- a/dada/DADA/Template/templates/mass_mailing_limit_notice_widget.tmpl
+++ b/dada/DADA/Template/templates/mass_mailing_limit_notice_widget.tmpl
@@ -2,20 +2,26 @@
 
 <!-- tmpl_if MAILOUT_AT_ONCE_LIMIT --> 
 	<!-- tmpl_if mailout_will_be_queued --> 
-		<p class="error">
-		 This Mass Mailing will be <strong>queued</strong>. 
+		<div class="badweatherbox">
+			
+		 <p>
+			This Mass Mailing will be <strong>queued</strong>. 
+		</p>
 		
-		<p class="error">There are currently 
+		<p>There are currently 
 		 <strong><!-- tmpl_var active_mailouts --></strong> actively sending Mass Mailing(s) (out of a total of <!-- tmpl_var num_total_mailouts -->)
 		 being sent (<strong><!-- tmpl_var num_list_mailouts --></strong> from this list). 
+		</p>
 		
-			<p class="error">A limit of <strong><!-- tmpl_var MAILOUT_AT_ONCE_LIMIT --></strong> active Mass Mailing(s) 
+			<p>A limit of <strong><!-- tmpl_var MAILOUT_AT_ONCE_LIMIT --></strong> active Mass Mailing(s) 
 		 at one time is currently enforced.</p>
+		</div>
+		
 	<!-- tmpl_else --> 
-		<p class="positive">Your Mass Mailing can begin immediately.</p> 
+		<div class="clearskiesbox"><p>Your Mass Mailing can begin immediately.</p></div> 
 	<!-- /tmpl_if --> 
 <!-- tmpl_else --> 
-	<p class="positive">Your Mass Mailing can begin immediately.</p> 
+	<div class="clearskiesbox"><p>Your Mass Mailing can begin immediately.</p></div> 
 <!-- /tmpl_if -->
 
 <!-- end mass_mailing_limit_notice_widget.tmpl --> 
