--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -526,10 +526,13 @@ This will ultimately set the 'Return-Path' email header to the list administrati
 <div class="buttonfloat">
  <input type="reset"  class="cautionary" value="Clear Changes" />
  <input type="submit" class="processing" value="Save Changes" />
+<input type="button"  value="Save, Then Test" class="processing" onClick="test_sending_preferences();" /> 
+
+</form> 
+
 </div>
 <div class="floatclear"></div>
 
-</form> 
 
 <fieldset> 
 
@@ -577,45 +580,35 @@ This will ultimately set the 'Return-Path' email header to the list administrati
 		
 		 function test_sending_preferences(){ 
 			var sending_method = get_sending_method(); 
-			new Ajax.Updater(
-				'sending_preferences_test', '<!-- tmpl_var S_PROGRAM_URL -->', 
-				{ 
-				    method: 'post', 
-					parameters: {
-						add_sendmail_f_flag:       $F('add_sendmail_f_flag'), 
-						smtp_server:               $F('smtp_server'), 
-						smtp_port:                 $F('smtp_port'),
-						use_smtp_ssl:              $F('use_smtp_ssl'),			
-						use_sasl_smtp_auth:        $F('use_sasl_smtp_auth'), 
-						sasl_auth_mechanism:       $F('sasl_auth_mechanism'), 
-						sasl_smtp_username:        $F('sasl_smtp_username'), 
-						sasl_smtp_password:        $F('sasl_smtp_password'), 
-						use_pop_before_smtp:       $F('use_pop_before_smtp'), 
-						pop3_server:               $F('pop3_server'), 
-						pop3_username:             $F('pop3_username'), 
-						pop3_password:             $F('pop3_password'), 
-						pop3_use_ssl:              $F('pop3_use_ssl'), 
-						set_smtp_sender:           $F('set_smtp_sender'),
-						process:                   $F('process'),
-						f:                         'sending_preferences_test',
-						sending_method:             sending_method, 
-
-						},
-
-				onCreate: 	 function() {
-					$('sending_preferences_test').hide(); 
-					$('sending_preferences_test_loading').show();
-
-				},
-				onComplete: 	 function() {
-
-					$('sending_preferences_test_loading').hide();
-					Effect.BlindDown('sending_preferences_test');
-
-				}	
-
-
+		
+			
+			Modalbox.show(
+				'<!-- tmpl_var S_PROGRAM_URL -->', {
+				title: 'Testing Sending Preferences...', 
+				width: 640, height: 480,
+				method: 'post', 
+				params: {
+					add_sendmail_f_flag:       $F('add_sendmail_f_flag'), 
+					smtp_server:               $F('smtp_server'), 
+					smtp_port:                 $F('smtp_port'),
+					use_smtp_ssl:              $F('use_smtp_ssl'),			
+					use_sasl_smtp_auth:        $F('use_sasl_smtp_auth'), 
+					sasl_auth_mechanism:       $F('sasl_auth_mechanism'), 
+					sasl_smtp_username:        $F('sasl_smtp_username'), 
+					sasl_smtp_password:        $F('sasl_smtp_password'), 
+					use_pop_before_smtp:       $F('use_pop_before_smtp'), 
+					pop3_server:               $F('pop3_server'), 
+					pop3_username:             $F('pop3_username'), 
+					pop3_password:             $F('pop3_password'), 
+					pop3_use_ssl:              $F('pop3_use_ssl'), 
+					set_smtp_sender:           $F('set_smtp_sender'),
+					process:                   $F('process'),
+					f:                         'sending_preferences_test',
+					sending_method:             sending_method, 
+					},
+				
 				});
+
 		}
 		
 		 function amazon_ses_get_stats() { 
@@ -643,14 +636,6 @@ This will ultimately set the 'Return-Path' email header to the list administrati
 	    //]]>
 	</script>
 
-	<p>
-		<input type="button"  value="Save, Then Test Your Sending Preferences..." class="processing" onClick="test_sending_preferences();" /> 
-	</p> 
-
-	<div id="sending_preferences_test_loading" style="display:none;background:#fff">
-		<p class="alert">Loading...</p>
-	</div>
-	<div id="sending_preferences_test" style="background:#fff"></div>	
 
 </fieldset>
  
